--- a/src/login.html
+++ b/src/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida - Moment 4.2</title>
+    <script type="module" src="js/login.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -21,8 +22,14 @@
             </nav>            
         </header>
         <main>
-            <h1>Autentisering och säkerhet</h1>
-            <h2>Välkommen till förstasidan</h2>
+            <div class="form-container">
+                <form id="loginForm">
+                    <h2>Logga in</h2>
+                    <input type="text" id="loginUsername" placeholder="Användarnamn" required>
+                    <input type="password" id="loginPassword" placeholder="Lösenord" required>
+                    <button type="submit">Logga in</button>
+                </form>
+            </div>
         </main>
         <footer>
             <p>Alexander Hilding</p>
@@ -30,3 +37,4 @@
     </div>
 </body>
 </html>
+
