--- a/src/logout.html
+++ b/src/logout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida - Moment 4.2</title>
+    <script type="module" src="js/logout.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -22,7 +23,8 @@
         </header>
         <main>
             <h1>Autentisering och säkerhet</h1>
-            <h2>Välkommen till förstasidan</h2>
+            <h2>Logga ut</h2>
+            <button onclick="logOut()">Logga ut</button>
         </main>
         <footer>
             <p>Alexander Hilding</p>
