--- a/src/register.html
+++ b/src/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida - Moment 4.2</title>
+    <script type="module" src="js/register.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -21,8 +22,14 @@
             </nav>            
         </header>
         <main>
-            <h1>Autentisering och säkerhet</h1>
-            <h2>Välkommen till förstasidan</h2>
+            <form id="registerForm">
+                <h2>Skapa ny användare</h2>
+                <input type="text" id="registerUsername" placeholder="Användarnamn" required>
+                <input type="password" id="registerPassword" placeholder="Lösenord" required>
+                <input type="text" id="registerFirstName" placeholder="Förnamn" required>
+                <input type="text" id="registerLastName" placeholder="Efternamn" required>
+                <button type="submit">Registrera</button>
+            </form>
         </main>
         <footer>
             <p>Alexander Hilding</p>
