Lagt till funktionalitet för att lägga till ny användare.

--- a/src/protected.html
+++ b/src/protected.html
@@ -25,6 +25,9 @@
         <main>
             <h1>Mina sidor</h1>
             <p>Inloggad</p>
+            <div id="accountDetails">
+                
+            </div>
             <button id="logoutBtn">Logga ut</button>
         </main>
         <footer>
