--- a/src/logout.html
+++ b/src/logout.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <h1>Du är nu utloggad</h1>
-
+            <p>Stäng fönster eller klicka här för att återgå till förstasidan</p>
             
         </main>
         <footer>
