Stylat med css och fixat utskrivning i DOM. Småfix.

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida - Moment 4.2</title>
     <script type="module" src="js/authNavigation.js"></script>
+    <script type="module" src="js/logout.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <div class="page-container">
@@ -20,11 +21,12 @@
                     <li id="registerLink"><a href="register.html">Registrera</a></li>
                     <li id="protectedLink"><a href="protected.html">Mina sidor</a></li>
                 </ul>
-            </nav>            
+            </nav>
+            <button id="logoutBtnHeader" class="logout-btn-corner"><i class="fas fa-sign-out-alt"></i> Logga ut</button>
         </header>
         <main>
-            <h1>Autentisering och säkerhet</h1>
-            <h2>Välkommen till förstasidan</h2>
+            <h1>DT207G - Moment 4</h1>
+            <h2>Autentisering och säkerhet</h2>
         </main>
         <footer>
             <p>Alexander Hilding</p>
