--- a/src/logout.html
+++ b/src/logout.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startsida - Moment 4.2</title>
+    <title>Utloggad - Moment 4.2</title>
     <script type="module" src="js/logout.js"></script>
     <script type="module" src="js/authNavigation.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <div class="page-container">
@@ -25,8 +25,9 @@
         </header>
         <main>
             <h1>Du är nu utloggad</h1>
-            <p>Stäng fönster eller klicka här för att återgå till förstasidan</p>
-            
+            <p>
+                <a href="index.html"><i class="fas fa-home"></i> Klicka här</a> för att återgå till förstasidan.
+            </p>
         </main>
         <footer>
             <p>Alexander Hilding</p>
