--- a/src/register.html
+++ b/src/register.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startsida - Moment 4.2</title>
+    <title>Registrera - Moment 4.2</title>
     <script type="module" src="js/register.js"></script>
     <script type="module" src="js/authNavigation.js"></script>
     <link rel="stylesheet" href="css/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <div class="page-container">
@@ -24,16 +24,18 @@
             </nav>            
         </header>
         <main>
-            <form id="registerForm">
-                <h2>Skapa ny användare</h2>
-                <input type="text" id="username" placeholder="Användarnamn" required>
-                <input type="password" id="password" placeholder="Lösenord" required>
-                <input type="text" id="firstname" placeholder="Förnamn" required>
-                <input type="text" id="lastname" placeholder="Efternamn" required>
-                <div id="formError" class="form-error"></div>
-                <div id="expAdded" class="exp-added"></div>
-                <button type="submit">Registrera</button>
-            </form>
+            <div class="form-container">
+                <form id="registerForm">
+                    <h2>Skapa ny användare</h2>
+                    <input type="text" id="username" placeholder="Användarnamn" required>
+                    <input type="password" id="password" placeholder="Lösenord" required>
+                    <input type="text" id="firstname" placeholder="Förnamn" required>
+                    <input type="text" id="lastname" placeholder="Efternamn" required>
+                    <div id="formError" class="form-error"></div>
+                    <div id="expAdded" class="exp-added"></div>
+                    <button class="button" type="submit"><i class="fas fa-user-plus"></i>  Registrera</button>
+                </form>
+            </div>
         </main>
         <footer>
             <p>Alexander Hilding</p>
