--- a/src/login.html
+++ b/src/login.html
@@ -30,7 +30,7 @@
                     <input type="text" id="loginUsername" placeholder="Användarnamn" required>
                     <input type="password" id="loginPassword" placeholder="Lösenord" required>
                     <div id="loginError" class="login-error"></div>
-                    <button class="button" type="submit">Logga in</button>
+                    <button class="button" type="submit"><i class="fas fa-sign-in-alt"></i> Logga in</button>
                 </form>
             </div>
         </main>
