Lagt till laddningsindikator.

--- a/src/login.html
+++ b/src/login.html
@@ -33,6 +33,9 @@
                     <button class="button" type="submit"><i class="fas fa-sign-in-alt"></i> Logga in</button>
                 </form>
             </div>
+            <div id="loadingIndicator" style="display: none;">
+                <div id="spinner"></div>
+            </div>
         </main>
         <footer>
             <p>Alexander Hilding</p>
