--- a/src/register.html
+++ b/src/register.html
@@ -36,6 +36,9 @@
                     <button class="button" type="submit"><i class="fas fa-user-plus"></i>  Registrera</button>
                 </form>
             </div>
+            <div id="loadingIndicator" style="display: none;">
+                <div id="spinner"></div>
+            </div>
         </main>
         <footer>
             <p>Alexander Hilding</p>
