--- a/src/protected.html
+++ b/src/protected.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
-<body>
+<body class="hidden" id="protectedPage">
     <div class="page-container">
         <header>
             <nav>
