--- a/src/protected.html
+++ b/src/protected.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mina Sidor</title>
+    <style>
+        body {
+            display: none;
+        }
+    </style>
     <script type="module" src="js/protected.js"></script>
     <script type="module" src="js/logout.js"></script>
     <script type="module" src="js/authNavigation.js"></script>
@@ -11,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    
 </head>
 <body class="hidden" id="protectedPage">
     <div class="page-container">
